Fixes limitation instruction text overflow.

--- a/client/stylesheets/home.css
+++ b/client/stylesheets/home.css
@@ -43,12 +43,9 @@
 
 .file-select-container {
   grid-area: files;
-  display: flex;
   border: none;
-  margin: 0 50px;
   padding: 10px;
-  height: 60px;
-  width: auto;
+  min-width: auto;
   border-radius: 0;
   background-color: var(--input-background);
   color: var(--instruction-text-primary);
@@ -58,10 +55,15 @@
 .upload-instructions {
   font-size: .9rem;
   align-self: center;
+  margin-bottom: 10px;
 }
 
 .upload-instructions li:last-child {
-  margin-top: 15px;
+  margin-left: 25px;
+}
+
+.upload-instructions li {
+  display: inline;
 }
 
 .asterisk {
@@ -72,8 +74,8 @@
   font-size: 1.25rem;
   cursor: pointer;
   border: none;
+  width: 100%;
   height: 60px;
-  flex-grow: 2;
 }
 
 #passEncrypt {
@@ -83,10 +85,8 @@
 
 #passEncrypt {
   border: none;
-  margin: 0 50px;
+  margin-left: 25px;
   padding: 10px;
-  height: 60px;
-  width: auto;
   border-radius: 0;
   background-color: var(--input-background);
   color: var(--instruction-text-primary);
